--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
+    "@capacitor/core": "^3.2.5",
+    "@ionic/angular": "^5.8.3",
     "@nrwl/angular": "12.10.1",
+    "firebase": "^9.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -32,13 +35,20 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
+    "@capacitor/android": "^3.2.5",
+    "@capacitor/cli": "^3.2.5",
+    "@capacitor/ios": "^3.2.5",
     "@nrwl/cli": "12.10.1",
     "@nrwl/cypress": "12.10.1",
     "@nrwl/eslint-plugin-nx": "12.10.1",
     "@nrwl/jest": "12.10.1",
     "@nrwl/linter": "12.10.1",
+    "@nrwl/react": "^12.0.0",
     "@nrwl/tao": "12.10.1",
     "@nrwl/workspace": "12.10.1",
+    "@nxtend/capacitor": "^12.0.0",
+    "@nxtend/firebase": "^12.1.0",
+    "@nxtend/ionic-angular": "^12.1.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~4.31.1",
