--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm ci && npx nx run mobile:build:production
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          entrypoint: ./apps/mobile
+          entrypoint: ./dist/apps/mobile
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BLOODSTOCK_965C2 }}'
           channelId: live
