--- a/angular.json
+++ b/angular.json
@@ -131,7 +131,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "outputs": ["{options.outputPath}"],
           "options": {
-            "outputPath": "apps/mobile/public",
+            "outputPath": "dist/apps/mobile/browser",
             "index": "apps/mobile/src/index.html",
             "main": "apps/mobile/src/main.ts",
             "polyfills": "apps/mobile/src/polyfills.ts",
@@ -316,6 +316,88 @@
           "options": {
             "cmd": "--help"
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/apps/mobile/server",
+            "main": "apps/mobile/server.ts",
+            "tsConfig": "apps/mobile/tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "apps/mobile/src/environments/environment.ts",
+                  "with": "apps/mobile/src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "mobile:build:development",
+              "serverTarget": "mobile:server:development"
+            },
+            "production": {
+              "browserTarget": "mobile:build:production",
+              "serverTarget": "mobile:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": ["/"]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "mobile:build:production",
+              "serverTarget": "mobile:server:production"
+            },
+            "development": {
+              "browserTarget": "mobile:build:development",
+              "serverTarget": "mobile:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
+        }
+      }
+    },
+    "mobile-browse-feature-browse": {
+      "projectType": "library",
+      "root": "libs/mobile/browse/feature/browse",
+      "sourceRoot": "libs/mobile/browse/feature/browse/src",
+      "prefix": "bloodstock",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/mobile/browse/feature/browse"],
+          "options": {
+            "jestConfig": "libs/mobile/browse/feature/browse/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/mobile/browse/feature/browse/src/**/*.ts",
+              "libs/mobile/browse/feature/browse/src/**/*.html"
+            ]
+          }
         }
       }
     },
@@ -344,9 +426,35 @@
           }
         }
       }
+    },
+    "mobile-home-feature-home": {
+      "projectType": "library",
+      "root": "libs/mobile/home/feature/home",
+      "sourceRoot": "libs/mobile/home/feature/home/src",
+      "prefix": "bloodstock",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/mobile/home/feature/home"],
+          "options": {
+            "jestConfig": "libs/mobile/home/feature/home/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/mobile/home/feature/home/src/**/*.ts",
+              "libs/mobile/home/feature/home/src/**/*.html"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
+    "analytics": "5cdd7e7a-e744-4c7e-bc99-56732c357dfc",
     "defaultCollection": "@nrwl/angular",
     "packageManager": "npm"
   },
